	and updated docbook entries to show default USER_AGENT.
2017-09-06 Todd Baker <bakert@rfa.org>
	* Modified ALL modules to use autotools (LINUX) to figure out
	PACKGE_VERSION information.  Added this to USER_AGENT default,
	setting it to RIVENDELL-C-API/x.x.x. Created rivendell/rd_getversion.c
	and rivendell/rd_getversion.h to return current pkacge version.
	Added tests/getversion_test.c and updated tests to use RD_GetVersion
	call in setting USER_AGENT field.
2017-09-07 Todd Baker <bakert@rfa.org>
	* Made Windows Specific code (Hack Hack) to try to get version info
	into the compilation. Need to revisit later. Fixed extraneous warnings
	and includes for Windows.
2017-09-07 Todd Baker <bakert@rfa.org>
	* Created rivendell/rd_getuseragent.c and rivendell/rd_getuseragent.h
	which provides the User Agent String. Created test program for User Agent
	String. Updated all rivendell modules to use get user agent and
	get version functions by default unless otherwise specified. Test
	suite also adds '(Test Suite)' to user agent string.
2017-09-18 Todd Baker <bakert@rfa.org>
	* Modified : rd_addcart.c, rd_addcut.c, rd_addlog.c, rd_assignschedcode.c 
	rd_audioinfo.c, rd_audiostore.c, rd_copyaudio.c, rd_createticket.c, 
	rd_deleteaudio.c, rd_deletelog.c, rd_editcart.c, rd_editcart.h, 
	rd_editcut.c, rd_editcut.h, rd_export.c, rd_exportpeaks.c,
	rd_import.c, rd_listcart.c, rd_listcarts.c, rd_listcartschedcodes.c 
	rd_listcut.c, rd_listcuts.c, rd_listgroup.c, rd_listgroups.c,
	rd_listlog.c, rd_listlogs.c , rd_listschedcodes.c, rd_listservices.c,
	rd_listsystemsettings.c, rd_removecart.c, rd_removecut.c,
	rd_savelog.c, rd_trimaudio.c, rd_unassignschedcode.c. 
	Fixes include correct order for curl_easy_init() calls and added 
	curl_easy_escape calls for all string fields.
2017-09-18 Todd Baker <bakert@rfa.org>
	Modified: PACKAGE_VERSION ,rivendell/rd_common.h - updated to 0.0.5.
	also modified configure.ac to clean up not a literal warnings.
