@@ -253,7 +253,7 @@ int RD_AddCut(struct rd_cut *cut[],
 	cartnumber);
   // Check if User Agent Present otherwise set to default
   if (strlen(user_agent)> 0){
-    curl_easy_setopt(curl, CURLOPT_USERAGENT,curl_easy_escape(curl,user_agent,0));
+    curl_easy_setopt(curl, CURLOPT_USERAGENT,user_agent);
   }
   else
   {
