@@ -57,7 +57,7 @@ int RD_AddLog(const char hostname[],
 
   if (strlen(user_agent)> 0)
   {
-    curl_easy_setopt(curl, CURLOPT_USERAGENT,curl_easy_escape(curl,user_agent,0));
+    curl_easy_setopt(curl, CURLOPT_USERAGENT,user_agent);
   }
   else
   {
