@@ -330,4 +330,5 @@
 2017-09-18 Todd Baker <bakert@rfa.org>
 	Modified: PACKAGE_VERSION ,rivendell/rd_common.h - updated to 0.0.5.
 	also modified configure.ac to clean up not a literal warnings.
-
+2017-09-18 Todd Baker <bakert@rfa.org>
+	Fixed rivendell/*.c funtion calls that use user provided User_Agent field.
